<resources>
    <string name="app_name">HealthyDrug</string>
    <string name="textview_text_feed_back">FeedBack</string>
    <string name="textview_text_hospital">Hospital</string>
    <string name="textview_text_see_all_hospital_in_here">see all hospital in here</string>
    <string name="textview_text_nhac_nho_uong_thuoc">Nhắc nhở uống thuốc</string>
    <string name="textview_text_dat_gio">Đặt giờ</string>
    <string name="textview_text_16_40">16</string>
    <string name="textview_text_tim_kiem">Tìm Kiếm</string>
    <string name="text_view_text_ten_thuoc">Tên Thuốc</string>
    <string name="text_view_text_tri_benh">Trị Bệnh</string>
    <string name="text_view_text_gia_tien">Giá Tiền</string>
    <string name="text_view_btn_tim_kiem">Tìm Kiếm</string>
    <string name="text_view_btn_dong">Đóng</string>
    <string name="text_view_text_Donepezil">Donepezil</string>
    <string name="text_view_text_Cam_Cum">Cảm Cúm</string>
    <string name="text_view_text_benh_vien_hoan_my">Bệnh Viện Hoàn Mỹ</string>
    <string name="text_view_text_Quan_Trung_Hai_Chau">Đường Quang Trung - Quận Hải Châu</string>
    <string name="text_view_text_thong_tin_cua_ban">Thông Tin Của Bạn</string>
    <string name="text_view_text_feedback">Thông Tin FeedBack</string>
    <string name="edt_hint_name">Tên Bạn</string>
    <string name="edt_hint_email">Email của bạn</string>
    <string name="text_view_btn_huy">Hủy</string>
    <string name="text_view_btn_gui">Gửi</string>
    <string name="textview_text_nguyen_van_linh_hai_chau"><i>Địa Chỉ: </i>Nguyễn Văn Linh , Hải Châu</string>
    <string name="textview_text_hotline_0891123111"><i>Hotline: </i>09223311445</string>
    <string name="textview_text_web"><i> Website: </i>http://hoanmyhospital.com</string>
    <string name="text_view_text_thuoc_ho_bao_thanh">Thuốc Ho Bảo Thanh</string>
    <string name="text_view_text_chi_dinh"> <i>Chỉ định: </i>Trị ho</string>
    <string name="text_view_text_huong_dan_su_dung"><i>Hướng Dấn Sử Dụng: </i>Uống sau khi ăn</string>
    <string name="text_view_text_gia_ban"> <i>Giá Bán: </i> 20k /lọ</string>
    <string name="drawer_open">Open drawer</string>
    <string name="drawer_close">Close drawer</string>
    <string name="action_search">Search</string>
    <string name="google_api_key">AIzaSyC06sbBmPKEHg-fY3kh82Z9N1RB-NT58LA</string>
    <string name="message_no_service_provider_available">No Service Provider Available</string>
    <string name="title_GPS_Not_Enabled">GPS Not Enabled</string>
    <string name="message_Do_you_wants_to_turn_On_GPS">Do you wants to turn On GPS</string>
    <string name="message_Yes">Yes</string>
    <string name="message_No">No</string>
    <string name="message_you_are_here">you are here</string>
    <string name="message_not_found_address">Not Found Address</string>
    <string name="title_action_bar_hospital">        Hospital</string>
    <string-array name="drawer_array">
        <item>Hospital</item>
        <item>Medicine</item>
        <item>Feedback</item>
        <item>Setting</item>
    </string-array>
    <string name="number_phone_receive_feedback">0166 858 3242</string>
    <string name="message_send_feedback_success">Send Feedback Successful</string>
    <string name="between_mins_and_hour"> : </string>
    <string name="title_settime">Set Time</string>
    <string name="textview_text_40">40</string>
    <string name="dialog_title_confirm_remind">Do you know this remind?</string>
    <string name="textview_text_ok">OK</string>
    <string name="textview_text_cancel">Cancel</string>
    <string name="textview_splash_THY">THY</string>
    <string name="textview_splash_HEA">HEA</string>
</resources>
